--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
 			<!-- Menu de recherche -->
 			<section class="filtres">
 				<h3>Filtres</h3>
+				<button class="btn-trier">Trier par prix croissant</button>
+				<br>
+				<button class="btn-filtrer">Filtrer les pièces non abordables</button><br>
+				<button class="btn-trierDescription">Trier par description </button><br>
+				<button class="btn-trierDecroissant">Trier par prix decroissant </button>
 			</section>
 
 			<!-- Fiches produits -->
